--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>PostCss</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dist/assets/app.css">
+    <link rel="stylesheet" href="dist/assets/example.css">
     <link rel="stylesheet" href="dist/assets/example-medium.css" media="(min-width: 800px)">
     <link rel="stylesheet" href="dist/assets/example-large.css" media="(min-width: 1200px)">
 </head>
