--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>PostCss</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dist/assets/example.css">
-    <link rel="stylesheet" href="dist/assets/example-medium.css" media="(min-width: 800px)">
-    <link rel="stylesheet" href="dist/assets/example-large.css" media="(min-width: 1200px)">
+    <link rel="stylesheet" href="dist/assets/app.css">
+    <link rel="stylesheet" href="dist/assets/app-medium.css" media="(min-width: 800px)">
+    <link rel="stylesheet" href="dist/assets/app-large.css" media="(min-width: 1200px)">
 </head>
 <body>
 <article class="article">
@@ -23,6 +23,6 @@
 
     <p>Doch alles Gutzureden konnte es nicht überzeugen und so dauerte es nicht lange, bis ihm ein paar heimtückische Werbetexter auflauerten, es mit Longe und Parole betrunken machten und es dann in ihre Agentur schleppten, wo sie es für ihre Projekte wieder und wieder mißbrauchten. Und wenn es nicht umgeschrieben wurde, dann benutzen Sie es immernoch.</p>
 </article>
-<script src="dist/assets/app.bundle.js"></script>
+<!--<script src="dist/assets/app.bundle.js"></script>-->
 </body>
 </html>
